fixed scroll behavior cutting off on axis x

--- a/app/components/wallet/navigation/ReceiveNavigation.scss
+++ b/app/components/wallet/navigation/ReceiveNavigation.scss
@@ -21,6 +21,12 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
+  overflow-y: auto;
+  flex: 1;
+  padding-bottom: 10px;
+  .Tooltip {
+    position: absolute; // added here due of specificity
+  }
 }
 .filterSection {
   padding-top: 20px;
